--- a/app/src/main/res/layout/book_list_item.xml
+++ b/app/src/main/res/layout/book_list_item.xml
@@ -17,7 +17,7 @@
         android:layout_weight="15"
         android:contentDescription="@string/icon"
         android:padding="8dp"
-        android:src="@drawable/book_open"
+        app:srcCompat="@drawable/book_open"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
